WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147663
Fix quirks with CMake and VS2015
https://bugs.webkit.org/show_bug.cgi?id=147663
Summary
Fix quirks with CMake and VS2015
Alex Christensen
Reported
2015-08-04 16:49:39 PDT
VS2015 is a little different.
Attachments
Patch
(4.93 KB, patch)
2015-08-04 16:53 PDT
,
Alex Christensen
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2015-08-04 16:53:21 PDT
Created
attachment 258235
[details]
Patch
Brent Fulgham
Comment 2
2015-08-04 16:56:10 PDT
Comment on
attachment 258235
[details]
Patch LGTM.
Alex Christensen
Comment 3
2017-04-05 18:58:11 PDT
http://trac.webkit.org/r187918
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug