Fix quirks with CMake and VS2015 https://bugs.webkit.org/show_bug.cgi?id=147663

Reviewed by Brent Fulgham.

.:

* Source/cmake/OptionsWindows.cmake:
Hide some warnings.  Using the same variable names in nested scopes is ok for now.
Disable INTL for now.

Source/WTF:

* wtf/Platform.h:
Build fix after r187908

WebKitLibraries:

* win/tools/vsprops/common.props:
Hide some warnings.  Using the same variable names in nested scopes is ok for now.



Canonical link: https://commits.webkit.org/165728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187918 268f45cc-cd09-0410-ab3c-d52691b4dbfc